--- a/ཕྱི་འབྲེལ་དང་འབྲེལ་བའི་ནང་དོན།.mw
+++ b/ཕྱི་འབྲེལ་དང་འབྲེལ་བའི་ནང་དོན།.mw
@@ -32,6 +32,19 @@
 
 
 
+=== ལྷོ་ཨེ་ཤི་ཡ་ལུང་ཕྱོགས་མཐུན་འབྲེལ་ཆོགས་པ། === 
+<big>༉ ལྷོ་ཨེ་ཤེ་ཡི་ཡ་ལུང་ཕྱོགས་མཐུན་འབྲེལ་ཚོགས་པ་འདི་ ལུང་ཕྱོགས་གཞུང་འབྲེལ་གྱི་ལས་ཁུངས་ཨིནམ་མ་ཚད་སྲིད་འབྲེལ་སྤྱི་ཚོགས་ཡང་ཨིན་པས། དེ་དམིགས་ཡུལ་ངོ་མ་ར་ འཐུས་མི་རྒྱལ་ཁབ་ཚུ་ནང་ཁ་འཆམས་ཡོད་པའི་གཞི་དོན་གུར་མཉམ་རུབ་ཀྱི་དཔལ་འབྱོར་དང་མི་སྡེ་ཡར་རྒྱས་གཏང་ནི་འདི་ཨིན། (ཤ་ཧིན། ༢༠༡༣)
+ལྷོ་ཨེ་ཤི་་ཡ་ལུང་ཕྱོགས་མཐུན་འབྲེལ་ཚོགས་པ་འདི་ འཛམ་གླིང་སྤྱི་ཚོགས་བཀའ་ཁྲིམས་ཀྱི་རྩ་ཚན་ ༤༢ པ་དང་འཁྲིལ་ཏེ་བརྩམས་ཡོདཔ་ཨིན་མས། ལུང་ཕྱོགས་མཐུན་འབྲེལ་ཚོགས་པ་འདི་ ཌཱ་ཀ་ལུ་སྦེ་སྤྱི་ལོ་ ༡༩༤༨ སྤྱི་ཟླ་ ༡༢ པའི་སྤྱི་ཚེས་ ༨ ལུ་གཞི་བཙུགས་འབད་ནུག། ཚོགས་པའི་དམིགས་གཏད་འདི་གཙོ་བོ་ར་ ལུང་ཕྱོགས་རྒྱལ་ཁབ་འཐུས་མི་གི་ནང་འཁོད་ལུ་ དཔལ་འབྱོར་དང་མི་སྡེ་ གཞན་རིག་གཞུང་དང་ལམ་སྲོལ་གོང་འཕེལ་གཏང་ནིའི་དོན་ལུ་དང་ ལྷག་པར་དུ་ ཡར་རྒྱས་འགྱོ་བའི་བསྒང་ཨིན་མི་ འཐུས་མི་རྒྱལ་ཁབ་ཚུ་གི་བར་ན་ མཐུན་ལམ་དང་མཉམ་འབྲེལ་ ཡར་རྒྱས་གཏང་ནི་འདི་ཨིན། ཚོགས་པ་འདི་གཞི་བཙུགས་འབད་ནི་གི་འཆར་གཞི་འགོ་དང་པ་ བྷང་ལ་དེཤ་གི་སྲིད་འཛིན་ ཟི་ཡུའར་རཽ་མཱན་ གྱིས་ ལྷོ་ཨེ་ཤི་ཡའི་རྒྱལ་ཁབ་ཚུ་ནང་གཟིགས་སྐོར་གནང་སྟེ་ དཔལ་འབྱོར་གོང་འཕེལ་གྱི་དོན་ལུ་ མཐུན་འབྲེལ་ཚོགས་པ་བཟོ་ནི་གི་ འོས་འབབ་ཡོད་མེད་ཀྱི་་བརྟག་དཔྱད་འབད་ནུག། དེ་ལས་ སྤྱི་ལོ་ ༡༩༧༠ སྐོར་ཆ་ལུ་ལྷོ་ཨེ་ཤི་ཡ་དབུས་ཀྱི་རྒྱལ་ཁབ་ བྷང་ལ་དེཤ། འབྲུག། རྒྱ་གར། མཱལ་དིབས། པཱ་ཀིསི་ཏཱན། ཤྲི་ལང་ཀ་རྒྱལ་ཁབ་ཚུ་གིས་ ལྷོ་ཨེ་ཤི་ཡའི་མི་སེར་ཚུ་ མཐུན་ལམ་དང་བློ་གཏད་ གོ་ཤེས་བསམ་ཤེས་ཀྱི་ཐོག་ལས་ ཚོང་འབྲེལ་གྱི་ལཱ་འབད་ནིའི་དོན་ལུ་ དཔལ་འབྱོར་གྱི་སྡེ་ཚན་ཅིག་བཟོ་ནིའི་ཁ་འཆམས་ནུག། སྤྱི་ལོ་ ༡༩༤༣ གྱི་ལོ་ལུ་ བྷང་ལ་དེཤ་གི་རྒྱལ་ས་ཌཱ་ཀ་ལུ་ ཕྱི་འབྲེལ་ལྷན་ཁག་གིས་འགོ་འདྲེན་འཐབ་པའི་རྒྱལ་སྤྱི་གྲོས་ཚོགས་ཀྱི་སྐབས་ལུ་ ལྷོ་ཨེ་ཤི་ཡ་དབུས་ཀྱི་རྒྱལ་ཁབ་ ༧ གྱིས་ལྷོ་ཨེ་ཤི་ཡ་ལུང་ཕྱོགས་མཐུན་འབྲེལ་ཚོགས་པ་གཞི་བཙུགས་འབད་ནི་སྦེ་ཆ་འཇོག་འབད་ནུག། ཚོགས་པ་དེ་གི་ཡོངས་ཁྱབ་དྲུང་ཆེན་གྱི་ཡིག་ཚང་ལྟེ་བ་འདི་ བལ་པོའི་རྒྱལ་ས་ ཀཱཊི་མཱན་ཌུ་ལུ་བཟོ་ནི་སྦེ་ཐག་ཆོད་དེ་ཡོདཔ་མ་ཚད་ གཅིག་སྒྲིལ་བྱེད་ལས་ཀྱི་ལས་རིམ་ ༥ ངོས་འཛིན་འབད་མི་ལས་ སོ་ནམ། མཐའ་ཟུར་གོང་འཕེལ། བརྒྱུད་འབྲེལ་གྱི་འཕྲུལ་ཆ། གནམ་གཤིས་རིག་པ། གསོ་བ་དང་མི་རློབས་ཀྱི་ལས་སྣ་ཚུ་ཨིན། ཨཕ་ག་ནིསི་ཏཱན་ཡང་ སྤྱི་ལོ་ ༢༠༠༧ ལུ་འཐུས་མི་སྦེ་ འཛུལ་ཞུགས་འབད་ཡོདཔ་དང་ གཞན་ལྟ་རྟོག་འབད་མི་རྒྱལ་ཁབ་</big> European Union, US, China  <big>ལ་སོགས་པ་སྒྲིག་མཐུན་གྱི་སྒོ་ལས་རྒྱལ་ཁབ་ ༩ ངོས་འཛིན་འབད་ཡོདཔ་ཨིན། (པྼི་ཡ།)
+ཚོགས་པའི་ཡིག་ཚང་ལྟེ་བ་ཀཱཊི་མཱན་ཌུ་ལུ་ཡོད། འཐུས་མི་རྒྱལ་ཁབ་ཀྱི་འགོ་ཁྲིད་ཚུ་གི་དོན་ལུ་ ལོ་བསྟར་བཞིན་དུ་གྲོས་འཛོམས་ཚར་རེ་འགོ་འདྲེན་འཐབ་དོ་ཡོདཔ་ཨིན་རུང་ རྒྱལ་ཁབ་འདི་ཚུ་གི་ཕྱི་འབྲེལ་བློན་པོ་ཚུ་གི་དོན་ལུ་ ཞལ་འཛོམས་ལོ་གཅིག་ལུ་ཚར་གཉིས་འབདཝ་ཨིན་མས། ཚོགས་པ་དེ་ནང་ ད་ལྟོ་ རྒྱ་གར། འབྲུག། བལ་པོ། ཨཕ་ག་ནིསི་ཏཱན། པ་ཀིསི་ཏཱན། ཤྲི་ལང་ཀ། མཱལ་དིབསི། བྷང་ལ་དེཤ་བཅས་ འཐུས་མི་ ༨ ཡོདཔ་ཨིན། རྒྱལ་ཁབ་ ༧ བྷང་ལ་དེཤ། རྒྱ་གར། མཱལ་དིབསི། བལ་པོ། པ་ཀིསི་ཏཱན། ཤྲི་ལང་ཀ་གི་ ཕྱི་འབྲེལ་དྲུང་ཆེན་ཚུ་གི་ཞལ་འཛོམས་ འགོ་དང་པ་འདི་ ཤྲི་ལང་ཀའི་རྒྱལ་ས་ ཀོ་ལོམ་བྷོ་ལུ་སྦེ་ སྤྱི་ལོ་ ༡༩༨༡ སྤྱི་ཟླ་ ༤ པའི་ནང་འཚོགས་ཡོདཔ་ཨིན།
+ལྷོ་ཨེ་ཤི་ཡའི་དབུ་ཁྲིད་ཞལ་འཛོམས་ནང་ འཐུས་མི་རྒྱལ་ཁབ་/གཞུང་ག་རའི་ འགོ་དཔོན་ཚུ་ཡོདཔ་ལས་ འ་ནཱི་འདི་ ཚོགས་པ་འདི་གི་མངོན་མཐོའི་འདུས་ཚོགས་ཨིན། དབུ་ཁྲིད་ཞལ་འཛོམས་འདི་ རྟག་པར་རྒྱུན་དུ་ ལོ་ངོ་ ༢ ཀྱི་ཤུལ་ལས་འགོ་འདྲེན་འཐབ་ཨིནམ་དང་དེ་ཡང་ འཐུས་མི་རྒྱལ་ཁབ་ཚུའི་མིང་གི་གོ་རིམ་ཨིང་སྐད་ཀྱི་གསལ་བྱེད་དང་འཁྲིལ་ཏེ་ཡོད་མི་ལྟར་དུ་ སྐོར་རྒྱབ་རྐྱབ་ཅི་ར་ འགོ་འདྲེན་འཐབ་ནི་ཡོད། ལྷོ་ཨེ་ཤི་ཡ་ལུང་ཕྱོགས་མཐུན་འབྲེལ་ཚོགས་པ་གཞི་བཙུགས་འབད་དགོ་པའི་དམིགས་ཡུལ་གཙོ་བོ་ར་ ལྷོ་ཨེ་ཤི་ཡའི་ལུང་ཕྱོགས་ཀྱི་མི་རློབས་ཚུ་གི་སྐྱིད་སྡུག་བལྟ་ནི་དང་ མི་ཚེའི་གནས་སྟངས་ཡར་རྒྱས་གཏང་ནི། དཔལ་འབྱོར་གོང་འཕེལ་གྱི་མགྱོགས་འགྲོས་སེང་ནི། མི་སྡེ་གོང་འཕེལ་དང་དཔལ་འབྱོར་ཡར་རྒྱས་བཏང་སྟེ་ གང་ཟག་གང་རུང་གི་ མི་ཚེ་ཚུལ་མཐུན་ལུ་གནས་ཏེ་ རང་གི་ལྕོགས་གྲུབ་ཧ་གོ་ཚུགསཔ་བཟོ་ནི། གཅིག་མཐུན་དང་རང་དགོ་རང་འདྲོང་རྒྱ་སྐྱེད་གཏང་ནི་དང་ ཕན་ཚུན་གྱི་བློ་གཏད་ལུ་ཕན་གྲོགས་འབད་ནི། བདག་དང་གཞན་གཉིས་ཀའི་དཀའ་ཐུབ་ཚུ་ ངོས་ལེན་དང་ ཧ་གོ་ཚུགསཔ་བཟོ་ནི། དཔལ་འབྱོར་ མི་སྡེ་ ལམ་སྲོལ་དང་མཚན་རིག་གི་ལཱ་ཚུ་ནང་ མཉམ་འབྲེལ་དང་བདག་གཞན་གཉིས་ཀ་ལུ་རྒྱབ་སྐྱོར་འབད་ནི་འདི་ རྒྱ་སྐྱེད་འབད་ནི། གཞན་ཡར་རྒྱས་འགྱོ་བའི་བསྒང་ཡོད་པའི་ རྒྱལ་ཁབ་ཚུ་ནང་མཐུན་འབྲེལ་དམ་ཟབ་བཟོ་ནི། རྒྱལ་སྤྱིའི་འཛོམ་གནས་ཀྱི་ནང་ལུ་ སྤྱི་མཐུན་མཐའ་དོན་གྱི་གནད་དོན་གུར་མཉམ་འབྲེལ་རྩ་བརྟན་བཟོ་ནི་དང་ རྒྱལ་སྤྱི་དང་ལུང་ཕྱོགས་ཀྱི་ལས་སྡེ་དང་ལས་ཁུངས་ཚུ་དང་གཅིག་ཁར་མཉམ་འབྲེལ་འབད་ནི།</big> (Revised SAARC brief)
+<big>ལྷོ་ཨེ་ཤི་ཡ་ལུང་ཕྱོགས་མཐུན་འབྲེལ་ཚོགས་པའི་གཞི་རྩ་ངོ་མ་ར་ འཐུས་མི་རྒྱལ་ཁབ་ཚུ་གི་རང་དབང་རང་བཙན། མངའ་ཁོངས་ཆིག་སྒྲིལ། ཆབ་སྲིད་འདྲ་མཉམ་དང་། རང་དབང་ལུ་གུས་ཞབས་འབད་ནི། རྒྱལ་ཁབ་རང་སོའི་ནང་འཁོད་ཀྱི་གནས་སྟངས་ལུ་རང་དཀྲོག་མི་འབད་ནི། ཕན་ཚུན/སྤྱི་མཐུན་ཁེ་ཕན་ལུ་མཉམ་འབྲེལ་འབད་ནི། གྲོས་ཆོད་ག་བཟུམ་ར་འབད་རུང་ མགྲིན་གཅིག་གི་ཐོག་ལས་གྲོས་ཐག་གཅད་ནི་དང་ གྲོས་ཐག་གཅད་པའི་སྐབས་ཚོགསགྲངས་ ༨ ངེས་པར་དུ་དགོ།
+ཟུང་ཕྱོགས་ཀྱི་གནད་དོན་ག་བཟུམ་ཡོད་རུང་ བཟུར་ཏེ་བཞག་ཞིནམ་ལས་ རྒྱལ་ཁབ་ཕྱོགས་མང་གི་གནད་དོན་གུར་ ཟུང་ཕྱོགས་ཀྱི་ཕྱོགས་ལྷུང་སྤུ་ཙམ་ཡང་མེད་པར་གྲོས་བསྡུར་འབད་དགོ། ཚོགས་པ་འདི་གི་ལས་འགན་དང་འགན་ཁུར་ཚུ་ག་ར་ ལྕོགས་གྲུབ་ཅན་གྱི་ཚོགས་པའི་ལས་ཁུངས་ཁག་མ་འདྲཝ་ དེ་ཡང་ བློན་པོའི་ལྷན་ཚོགས། གཏན་འཇགས་ཚོགས་ཆུང་། ཐབས་རིག་ཚོགས་ཆུང་། ལས་རིམ་ཚོགས་ཆུང་དང་ དྲུང་ཆེན་ཡིག་ཚང་ཚུ་གིས་འབདཝ་ཨིན། བློན་པོའི་ལྷན་ཚོགས་འདི་ནང་ འཐུས་མི་རྒྱལ་ཁབ་ཀྱི་ཕྱི་འབྲེལ་བློན་པོ་ཚུ་ཡོདཔ་ཨིན། ལྷན་ཚོགས་འདི་གི་ལཱ་འགན་འདི་ ༡༽ ཚོགས་པ་འདི་གི་སྲིད་བྱུས་བཟོ་ནི། ༢༽ཚོགས་པའི་ཡར་རྒྱས་ཀྱི་གནས་སྟངས་བསྐྱར་ཞིབ་འབད་ནི། ༣༽མཉམ་འབྲེལ་འབད་ནི་གི་གནད་དོན་གསརཔ་ཚུ་གྲོས་ཐག་གཅད་ནི། ༤༽ཚོགས་པའི་ཐབས་ལམ་གསརཔ་གཞི་བཙུགས་འབད་ནི།༼དགོ་མི་དགོ་དང་འཁྲིལ་ནི།༽ ཚོགས་པའི་དོན་ལུ་སྤྱིར་བཏང་ཁེ་ཕན་ཡོད་པའི་གཞི་དོན་གུར་ཐག་གཅད་ནི་ཚུ་ཨིན། བློན་པོའི་ལྷན་ཚོགས་ཀྱི་འཐུས་མི་ཚུ་གིས་ ལོ་རེའི་ནང་ ཚར་གཉིས་འཛོམས་འདུ་ནང་བཅའ་མར་གཏོགསཔ་ཨིན། 
+གཏན་འཇགས་ཚོགས་ཆུང་འདི་ནང་ འཐུས་མི་རྒྱལ་ཁབ་ཀྱི་ཕྱི་འབྲེལ་དྲུང་ཆེན་ཚུ་ཡོདཔ་ཨིན། ཁོང་གི་འགན་ཁུར་ངོ་མ་ར ༡༽མཉམ་འབྲེལ་གྱི་ལས་སྣ་ག་བཟུམ་ཡོད་རུང་ སྤྱིར་བཏང་ལྟ་རྟོག་དང་འགོ་འདྲེན་འཐབ་ཨིན། ༢༽ ལས་འགུལ་དང་ལས་རིམ་ཚུ་ངོས་ལེན་འབད་ནི་དང་ དེའི་དོན་ལུ་ མ་དངུལ་ཟད་འགྲོ་དབྱེ་ཞིབ་འབད་ནི། ༣༽ལས་སྡེ་ནང་འཁོད་ཀྱི་ གཙོ་རིམ་ཚུ་གཏན་འབེབས་འབད་ནི། ༤༽ལུང་ཕྱོགས་དང་ཕྱི་ཁའི་ཐོན་སྐྱེད་ཚུ་མཁོ་སྒྲུབ་འབད་ནི། ༥༽མཉམ་འབྲེལ་གྱི་ས་ཁོངས་ཚུ་ འོས་ལྡན་གྱི་ཞིབ་ཚོལ་འབད་དེ་ངོས་འཛིན་འབད་ནི་ཚུ་ཨིན། ཁོང་གི་བཀའ་ཁྲིམས་ལྟར་དུ་འབད་བ་ཅིན་ དུས་ནམ་དང་ནམ་ར་འབད་རུང་ བསྟུན་འགྲོས་འབད་དགོ་པའི་གནས་སྟངས་རེ་ཤརཝ་ད་ ངེས་པར་དུ་འཛོམས་དགོ། སྤྱིར་བཏང་འ་ནཱི་ཚོགས་ཆུང་གི་དབུ་ཁྲིད་ཞལ་འཛོམས་དང་ བློན་པོ་ལྷན་འཛོམས་འཚོགས་ནིའི་དུས་ཚོད་ཀྱི་སྔ་གོང་ལུ་འཚོགསཔ་ཨིན།
+ལས་རིམ་ཚོགས་ཆུང་འདི་ཚོགས་པ་འདི་གི་བཀའ་ཁྲིམས་འདུས་ཚོགས་ཡང་ཨིན། ཁོང་གི་འགན་ཁུར་ངོ་མ་ར་ གཏན་འཇགས་ཚོགས་ཆུང་ལུ་གཤམ་གསལ་ལུ་བཀོད་དེ་ཡོད་པའི་གནད་དོན་གུར་གྲོགས་རམ་འབད་ནི་འདི་ཨིན། ལུང་ཕྱོགས་ལས་འགུལ་གདམ་འཐུ་འབད་ནི། ཕྱི་ཁའི་ཐོན་སྐྱེད་ཚུ་མཁོ་སྒྲུབ་འབད་ནི། ལས་སྡེ་ནང་འཁོད་ལུ་ལཱ་དང་་ལས་རིམ་ཚུ་ གཙོ་རིམ་བསྒྲིགས་ཏེ་འབད་ནི། ལོ་བསྟར་གྱི་ལས་སྣ་ཚུ་བསྐྱར་ཞིབ་འབད་ནི་ཚུ་ཨིན། དེ་ཁར་ཕྱི་འབྲེལ་ལྷན་ཁག་གི་མཉམ་འབྲེལ་དྲུང་ཆེན་གྱི་གནས་ཚད་ནང་ཡོད་པའི་འགན་འཛིན་འགོ་དཔོན་ཚུ་ཡོདཔ་ཨིན། ཚོགས་ཆུང་འདི་གི་འཐུས་མི་ཚུ་གིས་ གཏན་འཇགས་ཚོགས་ཆུང་གི་སྔ་གོང་ལུ་ ཞལ་འཛོམས་འཚོགསཔ་མ་ཚད་ ཡང་ཅིན་ ལོ་མཇུག་བསྡུ་ཁམས་ལུ་འཚོགསཔ་ཨིན།
+ཐབས་རིག་ཚོགས་ཆུང་འདི་ནང་འཐུས་མི་རྒྱལ་ཁབ་ཀྱི་ངོ་ཚབ་ དམིགས་བསལ་ལས་སྡེ་ཁག་གི་མཁས་མཆོག་ཚུ་ཡོདཔ་ཨིན། ཁོང་གི་ལཱ་འགན་འདི་ ས་ཁོངས་སོ་སོ་དང་འཁྲིལ་ཏེ་ ལས་འགུལ་གྱི་ལས་རིམ་བཟོ་ནི་ཚུ་ཨིན། དེ་མ་ཚད་ ལས་རིམ་དེ་ཚུ་ ལྟ་རྟོག་འབད་དེ་ གཏན་འཇགས་ཚོགས་ཆུང་ལུ་ སྙན་ཞུ་འབད་དགོ། དེ་ལས་ ལཱ་འབད་མི་སྡེ་ཚན་དེ་ནང་ འཐུས་མི་རྒྱལ་ཁབ་ཀྱི་ངོ་ཚབ་ཚུ་ཡོདཔ་ཨིན། ཁོང་གི་ལས་འགན་ཡང་ཐབས་རིག་ཚོགས་ཆུང་དང་ཆ་འདྲ་སུ་ཅིག་ར་ཨིན། གཞན་ཡང་དམིགས་པ་དང་འཁྲིལ་བའི་ལས་འགུལ་གྱི་ལས་རིམ་ཚུ་གི་ཐབས་ལམ་དང་ མ་དངུལ་གྱི་འབྱུང་ཁུངས་ཚུ་ གྲོས་འཆར་བཀོདཔ་ཨིན། ད་ལྟོ་ལཱ་འབད་མི་ཚོགས་ཆུང་ ༤ ཡོདཔ་དང་ དེ་ཡང་ ༡༽བརྒྱུད་འབྲེལ་གྱི་འཕྲུལ་རིག། ༢༽སྐྱེ་ལྡན་འཕྲུལ་རིག། ༣༽ལྟ་བཤལ། ༤༽ནུས་རྫས་ཚུ་ཨིན། 
+མཇུག་རང་ ལྷོ་ཨེ་ཤི་ཡ་གི་དྲུང་ཆེན་ཡིག་ཚང་འདི་སྤྱི་ལོ ༡༩༨༧ ལུ་གཞི་བཙུགས་འབད་ཡོདཔ་དང་ སྤྱི་ལོ་ ༡༩༨༨སྤྱི་ཟླ་ ༡ པའི་ཚེས་ ༡ ལས་ཡིག་ཚང་འདི་བཀོལ་སྤྱོད་འབད་ནི་འགོ་བཙུགས་ནིག། ཁོང་གི་ལཱ་འགན་ངོ་མ་རང་ ཚོགས་པ་འདི་གི་ལས་རོམ་ཚུ་ ལྟ་རྟོག་འབད་དེ་འགོ་འདྲེན་འཐབ་ནི་དང་ ཚོགས་པའི་ཞལ་འཛོམས་ཀྱི་སྐབས་ལུ་ཞབས་ཏོག་ཞུ་ནི་ དེ་ལས་བརྒྱུད་འབྲེལ་གྱི་བརྒྱུད་ལམ་སྦེ་ཕྱག་ཞུཝ་ཨིན། དྲུང་ཆེན་ཡིག་ཚང་འདི་ ཡོངས་ཁྱབ་དྲུང་ཆེན་གྱི་འགོ་ཁྲིད་འབད་དེ་ ཁོ་གི་འོག་ལུ་འཐུས་མི་རྒྱལ་ཁབ་ལས་མདོ་ཆེན་རེ་རེ་འབདཝ་ད་ མདོ་ཆེན་བསྡོམས་ཏེ་ ༨ ཡོདཔ་ཨིན། ཡོངས་ཁྱབ་དྲུང་ཆེན་འདི་ འཐུས་མི་རྒྱལ་ཁབ་ཚུ་ལས་ ལོ་ངོ་ ༣ གྱི་རིང་ལུ་བཙག་འཐུ་འབདཝ་ཨིནམ་དང་ དེ་ཡང་རྒྱལ་ཁབ་ཀྱི་མིང་ ཨིང་སྐད་ཀྱི་གསལ་བྱེད་ཀྱི་གོ་རིམ་དང་འཁྲིལ་ཏེ་འཐུས་མི་རྒྱལ་ཁབ་ཚུ་གི་བར་ན་ སྐོར་རྒྱབ་སྦེ་འབདཝ་ཨིན།</big> (Revised SAARC brief)
+
+
 === ཁུངས་གཏུག། ===
 # Gyamtsho, T. (1996). A History of Bhutan. Thimphu, Bhutan: Ministry of Health and Education.
 # Wangchuk, L.  (2008) Facts about Bhutan. Thimphu, Absolute Bhutan Books.
@@ -39,3 +52,6 @@
 # Working for health. (2007). retrieved from http://www.who.int/about/brochure_en.pdf
 # Everything You Always Wanted To Know About The United Nations. (2010) New York, Department of Public Information. Retrieved from http://www.uni-siegen.de/mun-siegen/siegmun/everything_un.pdf
 # Ministry of Foreign Affairs (Bhutan). (2021). Bhutan Celebrates its 50 Years of Membership to UN. Thimphu: Retrieved from http://www.mfa.gov.bt/?p=11340
+# Priya, A. (n.d.). South Asian Association For Regional Cooperation: Problems and Prospects.
+# Revised SAARC brief. (n.d.).
+# Shaheen, I. (2013). South Asian Association for Regional Cooperation (SAARC): Its Role, Hurdles and Prospects. ResearchGate , 15 (6), 1.
