/* གོང་ས་འཇིགས་མེད་རྣམ་རྒྱལ་མཆོག་གི་སྐོར། */

--- a/གོང་ས་འཇིགས་མེད་རྣམ་རྒྱལ།.mw
+++ b/གོང་ས་འཇིགས་མེད་རྣམ་རྒྱལ།.mw
@@ -4,16 +4,15 @@
 <big>དེ་སྦེ་ཟླ་ངོ་དག་པ་ཅིག་ བཞུགས་པའི་སྐབས་ལུ་ཡང་ ཧེ་མ་གི་གཉིད་ལམ་མཐོང་ནི་དེ་གིས་ དེ་ཁར་ཡང་མ་བཞུགས་པར་ ཀྲོང་གསར་ཁ་ཐུག་བྱོན་ནུག།   དང་པ་ཆོས་རྩེ་གཟིམ་དཔོན་གྱི་འབོད་སྦེ་འཛུལ་ཏེ་ ཐབ་ཚང་ནང་ཕྱག་ལཱ་གནང་སྟེ་ བཞུགས་པའི་སྐབས་ ཁོ་ལུ་གཞན་དང་མ་འདྲ་བའི་ འཇོན་སྟངས་དང་ ཁེ་རྒོ་ཡོད་མི་ དཔོན་སློབ་མཚོ་སྐྱིད་རྡོ་རྗེ་གིས་མཁྱེན་ཞིནམ་ལས་ དཔོན་སློབ་ཀྱིས་འབོད་སྦེ་བཙུགས་གནང་ནུག། རིམ་པ་བཞིན་དུ་ ཁོ་རའི་ལྕོགས་གྲུབ་ལས་བརྟེན་ སྒར་ལྟོའི་གྲལ་འཛུལ་  འདེའི་ཤུལ་ལས་ ཆབ་ཁ་པའི་འགན་ཁུར་ལས་འགོ་བཙུགས་ གསོལ་དཔོན་དང་ གཟིམ་དཔོན་དང་ གཟིམ་སྒར་པའི་ལཱ་འགན་ རིམ་པ་བཞིན་མཛད་གནང་ནུག།  དགུང་ལོ་ ༢༢ དེ་ཅིག་ཁར་ ཕྱག་སྒར་པའི་ གོ་གནས་བཞེས་ཡོདཔ་ཨིན་པས། དེ་ལས་ལོ་ངོ་དག་པ་ཅིག་གི་རྒྱབ་ལས་ གཟིམ་སྒར་པ་དམངས་ཀྱི་ འགོ་བདག་ དར་དཔོན་དང གཟིམ་ནང་མ་གཉིས་ཆ་ར་ ཁོ་གིས་མཛད་བཞུགས་ཡོདཔ་ཨིན་པས། དེ་ལས་ལོ་ངོ་དག་པ་ཅིག་ལས་ ཀྲོང་གསར་ཚོང་དཔོན་བསྐོས་ཏེ་བོད་ལྷ་ལུང་ལུ་ཕེབས་པའི་སྐབས་ ཨོ་རྒྱན་ཕུན་ཚོགས་ཀྱི་ སྲས་མོ་པདྨ་ཆོས་སྐྱིད་དང་ ཚེ་རབས་སྔ་མའི་ལས་སྨོན་ལས་བརྟེན་ གཉིས་ཆ་རའི་ཐུགས་ཁར་ འབྲལ་མི་ཕད་པའི་ཐུགས་བརྩེ་དང་ ཕར་ཚུར་དགའ་བའི་ཤུགས་ཀྱིས་ གཅིག་གིས་གཅིག་ལུ་དགའ་བའི་གཏམ་སླབ་ ཚོང་འབྲེལ་གྱི་ཕྱག་ལཱ་ཡང་ སྔར་བ་ལྷགཔ་སྦེ་ཚོང་ལཱ་གི་ སྙན་གྲགས་ཐོབ་སྟེ་ བོད་འབྲུག་གཉིས་ལས་ གཟེངས་བསྟོད་ཐོབ་ཡོདཔ་ཨིན་པས། ཁོ་ལུ་འབྲུག་མི་ཚུ་གིས་ སློབ་དཔོན་གངས་ཆེན་ཟེར་ཡང་ཞུ་ནི་ཡོད་ཟེར་ཨིན་པས། དེ་ཡང་གཞན་ཕན་ཨིནམ་ལས་ དེས་ཀྲོང་གསར་དཔོན་སློབ་ རིམ་བྱོན་གྱི་དྲུང་ཆེན་ བཟུམ་སྦེ་ཕྱག་ལཱ་ གནང་ནི་འདི་གིས་ཨིན་མས།</big> <br>
 
 <big>དེ་ལས་ཁོ་ ཀྲོང་གསར་གཟིམ་དཔོན་དང་ ཀྲོང་གསར་ཚོང་དཔོན་གྱི་ཕྱག་འགན་ གཉིས་ཆ་ར་ མཛད་པའི་ཤུལ་མ་ ཁོ་མགྲོན་གཉེར་སྦེ་ བསྐོས་གནང་ནུག། འདེའི་སྐབས་ཁོ་གིས་ སྤུ་ན་ཁ་རྫོང་མེ་བཞེས་ཡོད་མི་འདི་ གསར་སྒྲུབ་འབད་ས་ ཕྱག་འགན་སྦོམ་མཛད་གནང་ཡི། དཔོན་སློབ་གསུམ་གྱི་གྲས་ལས་ ཀྲོང་གསར་དཔོན་སློབ་ཀྱི་མངའ་འོག་ལུ་ ཤར་ཕྱོགས་འཁོར་ལོ་རྩིབས་བརྒྱད་ ཚུདཔ་ལས་ ཁོང་ནུབ་ཕྱོགས་དཔོན་ཁག་ཚུ་གི་ མགོ་བསྐོར་ཐོག་ལས་དཔོན་སློབ་བཀྲོང་ནི་ཨིནམ་ གཟིམ་དཔོན་གྱིས་མཁྱེན་ཏེ་ དཔོན་སློབ་ཀྲོང་གསར་ལུ་ལོག་བྱོན་ནུག། འཇིགས་མེད་རྣམ་རྒྱལ་གྱི་ཁེ་ཀོ་དང་སྟོབས་ཤུགས་ཚུ་སླབ་པ་ཅིན་ མིག་ཐོལ་ཡང་ཁོ་གིས་ འདྲོག་འབད་འབདཝ་ ལོ་རྒྱུས་ཡང་འདུག། དེ་ལས་འཇིགས་མེད་རྣམ་རྒྱལ་ དགུང་ལོ་ ༢༩ རང་ལུགས་འདས་ལོ་ ༢༠༢ སྤྱི་ལོ་ ༡༨༥༣ ལུ་ ཀྲོང་གསར་དཔོན་སློབ་ཀྱི་ ཁྲི་ཐོག་ཁར་མངའ་གསོལ་ཞུ་ནུག།</big><br>
-དེ་ལས་སྔར་གྱི་དམ་བཅའ་ སེམས་ལས་མ་བརྗེད་པར་ པདྨ་ཆོས་སྐྱིད་གཉེན་གྲོགས་སྦེ་བསྟན་ནི་ཨིན་ ཟེར་ཡབ་དཔོན་སློབ་ཨོ་རྒྱན་ཕུན་ཚོགས་ལུ་ཞུ་སྟེ་ གཉེན་འདུན་མཛད་ནུག། དབང་འདུས་ཆོས་གླིང་ཕོ་བྲང་ལུ་སྦེ་ སྔར་ལུགས་དང་འཁྲིལ་ རྟེན་འབྲེལ་རིམ་གྱིས་བསྒྲིག་སྟེ་ ལྕམ་པདྨ་ཆོས་སྐྱིད་ ཁབ་ཏུ་བཞེས་ནུག། ཁོང་གཉིས་ལུ་སྲས་འཕྲིན་ལས་སྟོབས་རྒྱས་དང་ སྲས་ཨོ་རྒྱན་དབང་ཕྱུག་ དེ་ལས་སླསམོ་ ཨ་ཞེ་ཡེ་ཤེས་ཆོས་སྒྲོན་ གསུམ་སྐུ་འཁྲུངས་ནུག།</big><br>
+<big>དེ་ལས་སྔར་གྱི་དམ་བཅའ་ སེམས་ལས་མ་བརྗེད་པར་ པདྨ་ཆོས་སྐྱིད་གཉེན་གྲོགས་སྦེ་བསྟན་ནི་ཨིན་ ཟེར་ཡབ་དཔོན་སློབ་ཨོ་རྒྱན་ཕུན་ཚོགས་ལུ་ཞུ་སྟེ་ གཉེན་འདུན་མཛད་ནུག། དབང་འདུས་ཆོས་གླིང་ཕོ་བྲང་ལུ་སྦེ་ སྔར་ལུགས་དང་འཁྲིལ་ རྟེན་འབྲེལ་རིམ་གྱིས་བསྒྲིག་སྟེ་ ལྕམ་པདྨ་ཆོས་སྐྱིད་ ཁབ་ཏུ་བཞེས་ནུག། ཁོང་གཉིས་ལུ་སྲས་འཕྲིན་ལས་སྟོབས་རྒྱས་དང་ སྲས་ཨོ་རྒྱན་དབང་ཕྱུག་ དེ་ལས་སླསམོ་ ཨ་ཞེ་ཡེ་ཤེས་ཆོས་སྒྲོན་ གསུམ་སྐུ་འཁྲུངས་ནུག།</big><br>
 
-<big>ཕྱི་གླིང་པ་གིས་ བེངྒལ་དང་ཨ་སམ་ཕྱོགས་ དབང་བསྒྱུར་བའི་སྐབས་ ས་མཚམས་ཀྱི་འབྲུག་གི་དཔོན་ཁག་ཚུ་གིས་ རྒྱ་གར་གྱི་མི་སེར་ཚུ་བཙོན་ཁྲིམས་མང་རབས་བཀོལ་ཡོད་མི་ལུ་ ཕྱི་གཞུང་གིས་ཞི་བའི་གསུང་གྲོས་གནང་ནིའི་དཔའ་བཅམ་རུང་ འབྲུག་ལུ་ནང་འཁྲུགས་ལས་བརྟེན་ འབྲེལ་བ་འཐབ་མ་ཚུགས་པས། ཨིན་རུང་ཕྱི་གཞུང་གི་སྐུ་ཚབ་ཨ་ཤེ་ལི་ཨི་ཌེན་ འབྲུག་ལུ་འབྱོན་རུང་འདེའི་སྐབས་ གཞུང་ལྷན་རྒྱས་ཚུ་ རང་དོན་གཙོ་བོར་བཏོནམ་ལས་ སྐུ་ཚབ་ལོག་རྒྱ་གར་ལུ་སོང་ནུག། སྤྱི་ལོ་ ༡༨༦༤ རྫོགས་ཁམས་ལས་ས་མཚམས་ཁར་དང་གཅིག་ཁར་དམག་རྐྱབ་དགོཔ་བྱུང་ནུག། དེ་སྐབས་ཀྲོང་གསར་དཔོན་སློབ་འཇིགས་མེད་རྣམ་རྒྱལ་དང་ བྱ་དཀར་དཔོན་སློབ་བརྩོན་འགྲུས་རྒྱལ་མཚན་བླ་གཟིམ་བསོད་ནམས་དོན་གྲུབ་གསུམ་དམག་དཔོན་སྦེ་བྱོན་ནུག། འཇིགས་མེད་རྣམ་རྒྱལ་གྱིས་ཕྱི་གླིང་པའི་དམག་དཔོན་བསད་དེ་ ལོག་ཀྲོང་གསར་ལུ་བྱོན་ནུག། དེའི་ཤུལ་ལས་ཕྱི་གླིང་པ་གིས་ བདེ་ཝ་ཐང་ལས་དམག་ལོག་རྐྱབ་ད་ ཞི་བའི་ཆིངས་ཡིག་བཟོ་ནིའི་ ཐུགས་མཐུན་བྱུང་བའི་མཐའ་མར་ སྤྱི་ལོ་ ༡༨༦༥ སྤྱི་ཟླ་ ༡༡ ཚེས་ ༡༡ ལུ་སིན་ཅུ་ལ་ལུ་སྦེ་ དོན་ཚན་ ༡༠ འབད་མི་གི་ཆིངས་ཡིག་བཟོ་ནུག།</big><br>
+<big>ཕྱི་གླིང་པ་གིས་ བེངྒལ་དང་ཨ་སམ་ཕྱོགས་ དབང་བསྒྱུར་བའི་སྐབས་ ས་མཚམས་ཀྱི་འབྲུག་གི་དཔོན་ཁག་ཚུ་གིས་ རྒྱ་གར་གྱི་མི་སེར་ཚུ་བཙོན་ཁྲིམས་མང་རབས་བཀོལ་ཡོད་མི་ལུ་ ཕྱི་གཞུང་གིས་ཞི་བའི་གསུང་གྲོས་གནང་ནིའི་དཔའ་བཅམ་རུང་ འབྲུག་ལུ་ནང་འཁྲུགས་ལས་བརྟེན་ འབྲེལ་བ་འཐབ་མ་ཚུགས་པས། ཨིན་རུང་ཕྱི་གཞུང་གི་སྐུ་ཚབ་ཨ་ཤེ་ལི་ཨི་ཌེན་ འབྲུག་ལུ་འབྱོན་རུང་འདེའི་སྐབས་ གཞུང་ལྷན་རྒྱས་ཚུ་ རང་དོན་གཙོ་བོར་བཏོནམ་ལས་ སྐུ་ཚབ་ལོག་རྒྱ་གར་ལུ་སོང་ནུག། སྤྱི་ལོ་ ༡༨༦༤ རྫོགས་ཁམས་ལས་ས་མཚམས་ཁར་དང་གཅིག་ཁར་དམག་རྐྱབ་དགོཔ་བྱུང་ནུག། དེ་སྐབས་ཀྲོང་གསར་དཔོན་སློབ་འཇིགས་མེད་རྣམ་རྒྱལ་དང་ བྱ་དཀར་དཔོན་སློབ་བརྩོན་འགྲུས་རྒྱལ་མཚན་བླ་གཟིམ་བསོད་ནམས་དོན་གྲུབ་གསུམ་དམག་དཔོན་སྦེ་བྱོན་ནུག། འཇིགས་མེད་རྣམ་རྒྱལ་གྱིས་ཕྱི་གླིང་པའི་དམག་དཔོན་བསད་དེ་ ལོག་ཀྲོང་གསར་ལུ་བྱོན་ནུག། དེའི་ཤུལ་ལས་ཕྱི་གླིང་པ་གིས་ བདེ་ཝ་ཐང་ལས་དམག་ལོག་རྐྱབ་ད་ ཞི་བའི་ཆིངས་ཡིག་བཟོ་ནིའི་ ཐུགས་མཐུན་བྱུང་བའི་མཐའ་མར་ སྤྱི་ལོ་ ༡༨༦༥ སྤྱི་ཟླ་ ༡༡ ཚེས་ ༡༡ ལུ་སིན་ཅུ་ལ་ལུ་སྦེ་ དོན་ཚན་ ༡༠ འབད་མི་གི་ཆིངས་ཡིག་བཟོ་ནུག།</big>
 
 <big>ཕྱི་ནང་གི་དགྲ་བཏུལ་བའི་མཐའ་མར་ འཇིགས་མེད་རྣམ་རྒྱལ་གྱི་གཏམ་སྙན་གྲགས་དང་ མཛད་ཤུལ་གྱིས་ཁྱབ་སྟེ་ དེའི་སྐབས་སྡེ་སྲིད་ཁྲི་ཐོག་སྟོང་པ་ཡོདཔ་ལས་ ལྷན་རྒྱས་ཚུ་གིས་ སྤུ་ན་ཁ་ལུ་སྦེ་སྡེ་སྲིད་ཁྲི་རབས་ ༥༣ པའི་ཁྲི་ཐོག་ལུ་མངའ་གསོལ་ཞུ་ནུག། སྲིད་ཀྱི་ཐོག་ལུ་རྒྱལ་ཁབ་སྐྱོངམ་མ་ཚད་ ཆོས་ཀྱི་ཐོག་ བཀྲ་ཤིས་ཆོས་རྫོང་གསར་བཞེངས་ནང་ རང་བྱོན་ལྷ་ཁང་ནང་ དུས་གསུམ་སངས་རྒྱས་དང་ འཕགས་པ་རྣམ་པར་རྒྱལ་མ་ མཁན་པོའི་གཟིམ་ཅུང་ནང་ དུས་གསུམ་སངས་རྒྱས་དང་གནས་བརྟན་བཅུ་དྲུག མཚན་ཉིད་ལྷ་ཁང་ནང་འཇམ་དབྱངས་གསེར་སྐུ། གཟུངས་པའི་ནང་ཐུབ་པ་སྐུ་རྐྱང་། ལ་སོགས་པ་ཕུལ་གནང་ནུག།  སྤྱི་ལོ་ ༡༨༧༣ ཆུ་སྦྲུལ་ཟླ ༣ པའི་ནང་ གོང་གཟིམ་རྡོ་རྗེ་རྣམ་རྒྱལ་ སྡེ་སྲིད་ཀྱི་ཁྲི་ཐོག་ཏུ་གསར་བསྐོས་འབད་དེ་ ཁོ་ར་དགོངསམ་ཞུ་ནུག།</big><br>
 
 <big>དེ་ལས་ ཁོ་གིས་སྤྱི་ལོ་ ༡༨༧༨ ས་སྟག་ལུ་ སྲས་ཨོ་རྒྱན་དབང་ཕྱུག་དགུང་ལོ་ ༡༧ ལུ་སྤ་རོ་དཔོན་སློབ་དང་།  སྲས་རྒན་ཤོས་ཕྲིན་ལས་སྟོབས་རྒྱས་དགུང་ལོ་ ༢༢ ལུ་དབང་འདུས་ཕོ་བྲང་རྫོང་དཔོན་ལུ་ བསྐོ་བཞག་གནངམ་མ་ཚད། གཞུང་མགྲོན་གཉེར་ཕུན་ཚོགས་རྡོ་རྗེ་ སྤུ་ན་ཁ་རྫོང་དཔོན་དང་ དར་དཀར་དཔོན་སློབ་བསམ་གཏན་རྡོ་རྗེ་ བསྐོ་བཞག་གནང་སྟེ་རྒྱལ་ཁབ་ བདེ་སྐྱིད་ཀྱི་ངང་ལུ་སྐྱོངས་ནུག།</big><br>
 
 <big>སྤྱི་ལོ་ ༡༨༨༡ ལྕགས་སྦྲུལ་ལོ་ལུ་དགུང་ལོ་ ༥༧ བཞེས་པའི་སྐབས་ སྤུ་ན་ཁ་ལས་གསོལ་ཐབ་ ཐིམ་ཕུག་འབྱོནམ་ད་ རྡོ་ཅོག་ལ་ལས་ ཆིབས་གཡག་གུར་ཆིབས་ཏེ་ ལྷུང་ཚོ་ལུ་ཕེབས་ད་ ཆིབས་གཡག་འཆམ་རྐྱབ་སྟེ་རྒྱུག་འགྱོཝ་ད་ ཞབས་ཡབ་ནང་ལས་བཏོན་མ་ཚུགས་པར་ འདྲུད་བདའ་སྟེ་ དབུ་ལུ་རྨ་སྐྱོན་སྦོམ་ཞུགསཔ་ལས་ དཔྱ་ཤིང་གུར་སྦེ་སེམས་རྟོགས་ཁ་རྫོང་ནང་ཞུ་ནུག།  མི་རྗེ་ཁོ་རའི་སྲས་གཉིས་དང་ ཕུན་ཚོགས་རྡོ་རྗེ་དང་ ཨ་ལུ་རྡོ་རྗེ་བཞི་ལུ་ ཁོང་ར་བཞི་གཅིག་གིས་གཅིག་ལུ་ ཆ་རོགས་འབད་དགོ་པའི་ཞལ་ཆེམས་དང་ སྲས་གཉིས་ལུ་མ་འོངས་པའི་ཞལ་གདམས་ཚུ་ གསུངས་ཏེ་དགུང་ཞག་ ༥ བཞུགས་པའི་མཐའ་མར་ དགོངས་པ་རྫོགས་སོ་ནུག།</big><br>
-
 
 === ཁུངས་གཏུག། ===
 # དཔལ་འབྲུག་ཞིབ་འཇུག་ལྟེ་བ།  (༢༠༠༨) འབྲུག་རྒྱལ་དང་པའི་རྟོགས་བརྗོད། ཐིམ་ཕུག། དཔལ་འབྲུག་ཞིབ་འཇུག་ལྟེ་བ།
